--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,8 @@
 <%- include('header') %>
-
-
+<%= homeStartingContent %>
+<br>
+<%= aboutContent %>
+<br>
+<%= contactContent %>
+<br>
 <%- include('footer') %>
