--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,4 @@
-<%- include('header') %>
-<%= homeStartingContent %>
+<%- include('./partials/header') %>
+<p><%= homeStartingContent %></p> 
 <br>
-<%= aboutContent %>
-<br>
-<%= contactContent %>
-<br>
-<%- include('footer') %>
+<%- include('./partials/footer') %>
