--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,7 +2,7 @@
 <div>
     <h1>Compose</h1>
     <form action="/compose" method="post">
-        <input type="text" name="" placeholder="" autocomplete="off">
+        <input type="text" name="post" placeholder="" autocomplete="off">
         <button type="submit">Publish</button>
     </form>
     
