--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -4,19 +4,22 @@
   <div class="form-group">
     <label for="exampleFormControlInput1">Title</label>
     <input
-      type="email"
+      type="text"
       class="form-control"
       id="exampleFormControlInput1"
       placeholder="Title"
+      name="postTitle"
     />
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Post</label>
     <textarea
+      type="text"
       class="form-control"
       id="exampleFormControlTextarea1"
       rows="5"
       placeholder="Post"
+      name="postBody"
     ></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
