--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,15 @@
-<%- include('./partials/header') %>
-<p><%= homeStartingContent %></p> 
-<br>
-<%- include('./partials/footer') %>
+
+<%- include("partials/header"); -%>
+    <h1>Home</h1>
+    <p> <%= startingContent %> </p>
+
+
+  <%  posts.forEach(function(post){ %>
+
+    <h1><%=post.title%></h1>
+    <p><%=post.content%>rs</p>
+
+    <% }) %>
+
+
+<%- include("partials/footer"); -%>
